Make it work on JDK8